--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@
   font-weight: bold;
   font-size: 2rem;
 }
+
 .input-container {
   margin: 1rem;
   width: 50%;
@@ -20,6 +21,7 @@
   margin: 2rem;
   padding: 1rem;
   cursor: pointer;
+  height: 5rem;
 }
 
 .emojis {
